--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "name": "cards",
   "version": "1.0.0",
-  "main": "match.html",
+  "main": "root/match.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
