--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "version": "1.0.0",
   "main": "root/match.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "build": "npm run build"
   },
   "author": "IchGames",
   "license": "ISC",
