--- a/netlify.toml
+++ b/netlify.toml
@@ -1,65 +1,12 @@
 [build]
-  command = "echo 'default context'"
+  command = "npm run start" # или команда, которую вы используете для сборки проекта
 
-# Production context: all deploys from the Production branch
-# set in your site’s Branches settings in the UI will inherit
-# these settings. You can define environment variables
-# here but we recommend using the Netlify UI for sensitive
-# values to keep them out of your source repository.
-[context.production]
-  # publish = "output/"
-  command = "make publish"
-  environment = { NODE_VERSION = "14.15.3" }
-
-# Branch Deploy context: all deploys that are not from
-# a pull/merge request or from the Production branch
-# will inherit these settings.
-[context.branch-deploy]
-  command = "echo branch"
-[context.branch-deploy.environment]
-  NODE_ENV = "development"
-
-# Dev context: environment variables set here
-# are available for local development environments
-# run using Netlify Dev. These values can be
-# overwritten on branches that have a more specific
-# branch context configured.
-[context.dev.environment]
-  NODE_ENV = "development"
-
-# Specific branch context: all deploys from
-# this specific branch will inherit these settings.
-[context.staging] # “staging” is a branch name
-  command = "echo 'staging'"
-  base = "staging"
-
-# For contexts of branches with special characters,
-# enclose the branch name with quotes.
-[context."feat/branch"]
-  command = "echo 'special branch'"
-  base = "branch"
-
-# Redirects and headers are GLOBAL for all builds – they do not
-# get scoped to contexts no matter where you define them in the file.
-# For context-specific rules, use _headers or _redirects files,
-# which are PER-DEPLOY.
-
-# A basic redirect rule
 [[redirects]]
   from = "/*"
   to = "/root/:splat" # это указывает, что все запросы перенаправляются на файлы в папке "root"
   status = 200
-  
+
 [[headers]]
   for = "/root/*" # указываем, что это для файлов в папке "root"
     [headers.values]
     Cache-Control = "public, max-age=0, must-revalidate" # настройки кэширования
-
-# Use [dev] to set configuration overrides for local
-# development environments run using Netlify Dev - except
-# for environment variables. Environment variables for Netlify
-# Dev should be set under [context.dev.environment] instead.
-[dev]
-  command = "npm run start"
-  port = 5500
-
