--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run start" # или команда, которую вы используете для сборки проекта
+  command = "npm run build" # или команда, которую вы используете для сборки проекта
 
 [[redirects]]
   from = "/*"
