--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "Карточки/root" # Указываем базовую директорию для сборки
+  base = "root" # Указываем базовую директорию для сборки
 
   # Настроим команды сборки (если они нужны)
   command = "npm run build" # Замените на вашу команду сборки, если необходимо
