--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  # base = "root" # Указываем базовую директорию для сборки
+  base = "root" # Указываем базовую директорию для сборки
 
   # Настроим команды сборки (если они нужны)
   command = "node server.js" # Замените на вашу команду сборки, если необходимо
