--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   base = "root" # Указываем базовую директорию для сборки
 
-  # Настроим команды сборки (если они нужны)
-  command = "node run build" # Замените на вашу команду сборки, если необходимо
+#   # Настроим команды сборки (если они нужны)
+#   command = "node run build" # Замените на вашу команду сборки, если необходимо
 
 [build.environment]
   TELEGRAM_BOT_TOKEN = "6774167185:AAFfpIXcx2zdDkjQocnsdwTTWPHsnCm0jBE" # Установите переменную среды TELEGRAM_BOT_TOKEN
