--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "name": "cards",
   "version": "1.0.0",
+  "main": "root/match.html",
   "scripts": {
     "start": "node server.js",
     "build": "npm run start"
