--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   base = "root" # Указываем базовую директорию для сборки
+  publish = "root"
 
 #   # Настроим команды сборки (если они нужны)
 #   command = "node run build" # Замените на вашу команду сборки, если необходимо
