--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "root" # Указываем базовую директорию для сборки
+  # base = "root" # Указываем базовую директорию для сборки
   publish = "root"
 
 #   # Настроим команды сборки (если они нужны)
