--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "name": "cards",
   "version": "1.0.0",
-  "main": "./match.html",
+  "main": "match.html",
   "scripts": {
     "start": "node server.js",
     "build": "npm run start"
