--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "version": "1.0.0",
   "main": "match.html",
   "scripts": {
-    "start": "node server.js",
-    "build": "npm run start"
+    "build": "node server.js"
   },
   "author": "IchGames",
   "license": "ISC",
