--- a/~netlify.toml
+++ b/~netlify.toml
@@ -10,7 +10,7 @@
 
 [[redirects]] # Настройка перенаправления, если нужно
   from = "/*"
-  to = "match.html"
+  to = "root/match.html"
   # to = "/root/:splat"
   status = 200
 
