--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "version": "1.0.0",
   "main": "match.html",
   "scripts": {
-    "build": "node server.js"
+    "start": "node server.js",
+    "build": "npm run start"
   },
   "author": "IchGames",
   "license": "ISC",
